--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,29 +71,16 @@ body {
     width: 172px;
     margin: 0 8px 0 8px;
     border-radius: 9px;
+    position: relative;
 }
 
 .product:hover{
-    opacity: 0.9;
+    opacity: 0.8;
 }
 
-.selected_main_course{
+.selected_product{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F;
-    background-image: url('../images/confirm.svg');
-    background-repeat: no-repeat;
-    background-position: 144px 175px;
-}
-
-.selected_drink{
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F;
-    background-image: url('../images/confirm.svg');
-    background-repeat: no-repeat;
-    background-position: 144px 175px;
-}
-
-.selected_dessert{
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F;
-    background-image: url('../images/confirm.svg');
+    background-image: url('./assets/img/confirm.svg');
     background-repeat: no-repeat;
     background-position: 144px 175px;
 }
@@ -133,6 +120,27 @@ body {
     line-height: 19px;
     text-align: start;
     margin: 0 14px 13px 14px;
+}
+
+.product_quantifier.off{
+    display: none;
+}
+.product_quantifier{
+    width: 47px;
+    height: 19px;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 11px;
+    right: 14px;
+}
+
+.increase_quantity{
+    color: #32B72F;
+}
+
+.decrease_quantity{
+    color: #CF2B2B;
 }
 
 .confirm_box{
