--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,7 @@ body {
     width: 100%;
     height: 92px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    overflow-y: visible;
 }
 
 .top_title{
@@ -59,6 +60,7 @@ body {
     justify-content: space-evenly;
     margin-left: 5%;
     overflow-x: scroll;
+    overflow-y: clip;
 }
 
 .product{
